--- a/pom.xml
+++ b/pom.xml
@@ -4,28 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.sematext.hbase.ds</groupId>
+    <groupId>io.appform.hbase.ds</groupId>
     <artifactId>hbase-ds</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compile.source>1.8</maven.compile.source>
-        <maven.compile.target>1.8</maven.compile.target>
-        <hbase.version>1.1.2.2.4.2.0-246</hbase.version>
-        <zookeeper.version>3.4.6.2.4.1.1-3</zookeeper.version>
-        <slf4j.version>1.7.12</slf4j.version>
-        <lombok.version>1.16.6</lombok.version>
-        <zk.mini.cluster.version>0.1.1</zk.mini.cluster.version>
-        <hbase.mini.cluster.version>0.1.1</hbase.mini.cluster.version>
-        <testng.version>6.9.9</testng.version>
-    </properties>
-
+    <version>0.0.3</version>
+    <name>HBase DS</name>
+    <url>https://github.com/appform-io/hbase-ds</url>
+    <description>Key partitioning library for HBase</description>
+    <inceptionYear>2017</inceptionYear>
     <scm>
-        <connection>scm:git:https://github.com/shashankg/HBaseDS.git</connection>
-        <developerConnection>scm:git:https://github.com/shashankg/HBaseDS.git</developerConnection>
+        <connection>scm:git:https://github.com/appform-io/hbase-ds.git</connection>
+        <developerConnection>scm:git:https://github.com/appform-io/hbase-ds.git
+        </developerConnection>
         <tag>HEAD</tag>
-        <url>https://github.com/shashankg/HBaseDS.git</url>
+        <url>https://github.com/appform-io/hbase-ds.git</url>
     </scm>
 
     <licenses>
@@ -37,18 +28,67 @@
         </license>
     </licenses>
 
+    <issueManagement>
+        <system>GitHub Issues</system>
+        <url>https://github.com/appform-io/hbase-ds/issues</url>
+    </issueManagement>
+
+    <developers>
+        <developer>
+            <id>shashank.g</id>
+            <name>Shashank Gautam</name>
+            <email>shashank.g@gmail.com</email>
+            <roles>
+                <role>owner</role>
+                <role>developer</role>
+            </roles>
+        </developer>
+        <developer>
+            <id>phaneesh.n</id>
+            <name>Phaneesh Nagaraja</name>
+            <email>phaneesh.n@gmail.com</email>
+            <roles>
+                <role>owner</role>
+                <role>developer</role>
+            </roles>
+        </developer>
+    </developers>
+
+    <ciManagement>
+        <system>Gitlab CI Sonarcloud Build</system>
+        <url>https://github.com/appform-io/hbase-ds/actions/workflows/sonarcloud-checks.yml</url>
+    </ciManagement>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+
     <repositories>
         <repository>
-            <id>hdp-public</id>
-            <name>HDP Public</name>
-            <url>http://repo.hortonworks.com/content/groups/public</url>
-        </repository>
-        <repository>
-            <id>hdp-releases</id>
-            <name>HDP Releases</name>
-            <url>http://repo.hortonworks.com/content/repositories/releases/</url>
+            <id>horton</id>
+            <url>https://repo.hortonworks.com/content/repositories/releases/</url>
         </repository>
     </repositories>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compile.source>1.8</maven.compile.source>
+        <maven.compile.target>1.8</maven.compile.target>
+        <hbase.version>1.1.2.2.4.2.0-246</hbase.version>
+        <zookeeper.version>3.4.6.2.4.1.1-3</zookeeper.version>
+        <slf4j.version>1.7.12</slf4j.version>
+        <lombok.version>1.18.22</lombok.version>
+        <zk.mini.cluster.version>0.1.1</zk.mini.cluster.version>
+        <hbase.mini.cluster.version>0.1.1</hbase.mini.cluster.version>
+        <testng.version>6.9.9</testng.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -57,12 +97,14 @@
             <version>${hbase.version}</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
             <version>${zookeeper.version}</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>com.github.sakserv</groupId>
             <artifactId>hadoop-mini-clusters-hbase</artifactId>
@@ -105,7 +147,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
                 <configuration>
                     <source>${maven.compile.source}</source>
                     <target>${maven.compile.target}</target>
@@ -114,29 +155,124 @@
                 </configuration>
             </plugin>
 
-            <!-- also publish source jar for development of depending projects -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.6</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <!-- attached to Maven test phase -->
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
-                        <id>create-source-jar</id>
+                        <id>attach-sources</id>
                         <goals>
                             <goal>jar</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.3.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.7</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
-    <distributionManagement>
-        <repository>
-            <id>clojars</id>
-            <name>Clojars repository</name>
-            <url>https://clojars.org/repo</url>
-        </repository>
-    </distributionManagement>
+    <profiles>
+        <profile>
+            <id>release</id>
+            <activation>
+                <property>
+                    <name>release</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-enforcer-plugin</artifactId>
+                        <version>3.0.0-M2</version>
+                        <executions>
+                            <execution>
+                                <id>enforce-no-snapshots</id>
+                                <goals>
+                                    <goal>enforce</goal>
+                                </goals>
+                                <configuration>
+                                    <rules>
+                                        <requireReleaseDeps>
+                                            <message>No Snapshots Allowed!</message>
+                                        </requireReleaseDeps>
+                                    </rules>
+                                    <fail>true</fail>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                                <configuration>
+                                    <useAgent>true</useAgent>
+                                    <executable>gpg2</executable>
+                                    <!-- Run something like 'gpg2 -ab out' to cache the creds
+                                     on agent before running if needed -->
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
