--- a/pom.xml
+++ b/pom.xml
@@ -81,8 +81,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compile.source>1.8</maven.compile.source>
         <maven.compile.target>1.8</maven.compile.target>
-        <hbase.version>1.1.2.2.4.2.0-246</hbase.version>
-        <zookeeper.version>3.4.6.2.4.1.1-3</zookeeper.version>
+        <hbase.version>1.1.2</hbase.version>
+        <zookeeper.version>3.4.6</zookeeper.version>
         <slf4j.version>1.7.12</slf4j.version>
         <lombok.version>1.18.22</lombok.version>
         <zk.mini.cluster.version>0.1.1</zk.mini.cluster.version>
